force-app/main/default/objects/Campaign/fields/Allow_Overflow__c.field-meta.xml
<CustomField>
    <fullName>Allow_Overflow__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Overflow</label>
    <type>Checkbox</type>
</CustomField>