force-app/main/default/objects/Campaign/fields/Anticipated_Attendance__c.field-meta.xml
<CustomField>
    <fullName>Anticipated_Attendance__c</fullName>
    <description>This field is used for EOSS Event record type to enter the anticipated number of attendees.</description>
    <label>Anticipated Attendance</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>