force-app/main/default/objects/Campaign/fields/Campaign_15_digit_Id__c.field-meta.xml
<CustomField>
    <fullName>Campaign_15_digit_Id__c</fullName>
    <formula>Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Campaign 15-digit Id</label>
    <type>Text</type>
</CustomField>