force-app/main/default/objects/Campaign/fields/Campaign_External_ID__c.field-meta.xml
<CustomField>
    <fullName>Campaign_External_ID__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Uniquely identifies a Campaign. Used for data integration.</inlineHelpText>
    <label>Campaign External ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>