force-app/main/default/objects/Campaign/fields/Campus_Location__c.field-meta.xml
<CustomField>
    <fullName>Campus_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campus Location of the event.</description>
    <label>Campus Location</label>
    <referenceTo>Location__c</referenceTo>
    <relationshipLabel>Campaigns</relationshipLabel>
    <relationshipName>Campaigns</relationshipName>
    <type>Lookup</type>
</CustomField>