force-app/main/default/objects/Campaign/fields/Capacity__c.field-meta.xml
<CustomField>
    <fullName>Capacity__c</fullName>
    <description>Maximum number of attendees (including guests) that the event can accommodate.</description>
    <label>Capacity</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>