force-app/main/default/objects/Campaign/fields/Career__c.field-meta.xml
<CustomField>
    <fullName>Career__c</fullName>
    <inlineHelpText>Use this field to define which audience type this Campaign is targeting.</inlineHelpText>
    <label>Career</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Graduate</fullName>
            </value>
            <value>
                <fullName>Undergraduate</fullName>
            </value>
            <value>
                <fullName>Law</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>