force-app/main/default/objects/Campaign/fields/Case_Assignment_Rule__c.field-meta.xml
<CustomField>
    <fullName>Case_Assignment_Rule__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>When a Case is created with this Campaign listed as the "Case Source", some ASU managed processes will use the Case Assignment Rule listed for specific guidance on how to provision that Case.</inlineHelpText>
    <label>Case Assignment Rule</label>
    <referenceTo>Case_Assignment_Rule__c</referenceTo>
    <relationshipLabel>Source Campaigns</relationshipLabel>
    <relationshipName>Campaigns</relationshipName>
    <type>Lookup</type>
</CustomField>