force-app/main/default/objects/Campaign/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Admitted Student Day</fullName>
            </value>
            <value>
                <fullName>Adult Workshop</fullName>
            </value>
            <value>
                <fullName>Alumni Sun Devil Send-Offs</fullName>
            </value>
            <value>
                <fullName>American Dream Academy</fullName>
            </value>
            <value>
                <fullName>Assistantship</fullName>
            </value>
            <value>
                <fullName>ASU College On-Campus Event</fullName>
            </value>
            <value>
                <fullName>ASU College OOS Event</fullName>
            </value>
            <value>
                <fullName>ASU College Visit</fullName>
            </value>
            <value>
                <fullName>ASU Scholar Information Night</fullName>
            </value>
            <value>
                <fullName>AVID</fullName>
            </value>
            <value>
                <fullName>AZ Commission</fullName>
            </value>
            <value>
                <fullName>Barrett</fullName>
            </value>
            <value>
                <fullName>Barrett Summer Scholars</fullName>
            </value>
            <value>
                <fullName>Barrett Summer Scholars - 7th</fullName>
            </value>
            <value>
                <fullName>Barrett Summer Scholars - 8th</fullName>
            </value>
            <value>
                <fullName>Barrett Summer Scholars - 9th</fullName>
            </value>
            <value>
                <fullName>Barrett Summer Scholars - HS Alumni Engagement</fullName>
            </value>
            <value>
                <fullName>College Bound Parent</fullName>
            </value>
            <value>
                <fullName>College-Career Fair</fullName>
            </value>
            <value>
                <fullName>College Fair</fullName>
            </value>
            <value>
                <fullName>College Fair - ACAC</fullName>
            </value>
            <value>
                <fullName>College Session</fullName>
            </value>
            <value>
                <fullName>Community College Visit</fullName>
            </value>
            <value>
                <fullName>Continuing Student</fullName>
            </value>
            <value>
                <fullName>Current Student Affinity</fullName>
            </value>
            <value>
                <fullName>Early Outreach</fullName>
            </value>
            <value>
                <fullName>Earn to Learn</fullName>
            </value>
            <value>
                <fullName>Earth and Science Exploration</fullName>
            </value>
            <value>
                <fullName>Experience ASU</fullName>
            </value>
            <value>
                <fullName>Experience ASU - Guided Virtual Tour</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>