force-app/main/default/objects/Campaign/fields/CBO__c.field-meta.xml
<CustomField>
    <fullName>CBO__c</fullName>
    <description>This field captures what community based organization the event is affiliate. This field is for EOSS event record type only.</description>
    <label>Community Based Organization</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Aguila</fullName>
            </value>
            <value>
                <fullName>AZ Junior High School Council Association</fullName>
            </value>
            <value>
                <fullName>Be A Leader Foundation</fullName>
            </value>
            <value>
                <fullName>Boys and Girls Club</fullName>
            </value>
            <value>
                <fullName>CoLLEGE Bound Mesa</fullName>
            </value>
            <value>
                <fullName>Girls Rule</fullName>
            </value>
            <value>
                <fullName>Hermanas Conference</fullName>
            </value>
            <value>
                <fullName>Isaac Amaya Foundation</fullName>
            </value>
            <value>
                <fullName>JAG</fullName>
            </value>
            <value>
                <fullName>Maker Fair</fullName>
            </value>
            <value>
                <fullName>Navajo Housing Authority</fullName>
            </value>
            <value>
                <fullName>Mac-Ro-Rodel Foundation</fullName>
            </value>
            <value>
                <fullName>Southwest Behavior Health Community</fullName>
            </value>
            <value>
                <fullName>Stand for Children</fullName>
            </value>
            <value>
                <fullName>The Harvard Club of Phoenix</fullName>
            </value>
            <value>
                <fullName>Tumbleweed Learning Center</fullName>
            </value>
            <value>
                <fullName>UMOM New Day Center</fullName>
            </value>
            <value>
                <fullName>Yacuievers</fullName>
            </value>
            <value>
                <fullName>YMCA Y Achievers</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>