force-app/main/default/objects/Campaign/fields/Days_Until_Event__c.field-meta.xml
<CustomField>
    <fullName>Days_Until_Event__c</fullName>
    <description>DateValue( Event_Start_Date__c)- today()</description>
    <formula>Event_Start_Date__c - TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculates the number of days until the event.</inlineHelpText>
    <label>Days Until Event</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>