force-app/main/default/objects/Campaign/fields/EOSS_Detail__c.field-meta.xml
<CustomField>
    <fullName>EOSS_Detail__c</fullName>
    <description>Details the Type and Category of the EOSS Event. This is for EOSS Event record type only.</description>
    <label>(DO NOT USE) EOSS Detail</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Future Sun Devil Experience</fullName>
            </value>
            <value>
                <fullName>Self-Facilitated</fullName>
            </value>
            <value>
                <fullName>Earn to Learn Recruitment Cycle Number</fullName>
            </value>
            <value>
                <fullName>Future Sun Devil Families - 9th</fullName>
            </value>
            <value>
                <fullName>Future Sun Devil Families - 10th</fullName>
            </value>
            <value>
                <fullName>FutureSun Devil Families - 11th</fullName>
            </value>
            <value>
                <fullName>Future Sun Devil Families - 12th</fullName>
            </value>
            <value>
                <fullName>Hispanic Mother Daughter Program</fullName>
            </value>
            <value>
                <fullName>Avid</fullName>
            </value>
            <value>
                <fullName>Earth and Science Exploration</fullName>
            </value>
            <value>
                <fullName>Mac-Ro</fullName>
            </value>
            <value>
                <fullName>Night of the Open Door</fullName>
            </value>
            <value>
                <fullName>Thrive Time</fullName>
            </value>
            <value>
                <fullName>TNT</fullName>
            </value>
            <value>
                <fullName>Barrett Summer Scholars - 7th</fullName>
            </value>
            <value>
                <fullName>Barrett Summer Scholars - 8th</fullName>
            </value>
            <value>
                <fullName>Barrett Summer Scholars - 9th</fullName>
            </value>
            <value>
                <fullName>Summer Enrichment Program</fullName>
            </value>
            <value>
                <fullName>Non-Targeted Visits</fullName>
            </value>
            <value>
                <fullName>Road to the University</fullName>
            </value>
            <value>
                <fullName>Homecoming</fullName>
            </value>
            <value>
                <fullName>Tour of Majors</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>