force-app/main/default/objects/Campaign/fields/Event_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Event_End_Date__c</fullName>
    <description>Event end date</description>
    <label>Event End Date</label>
    <type>Date</type>
</CustomField>