force-app/main/default/objects/Campaign/fields/Event_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Event_End_Time__c</fullName>
    <description>Use the ASU Communication Guide styles (e.g.  10 a.m. - noon - 1:30 p.m.).</description>
    <inlineHelpText>Use the ASU Communication Guide styles (e.g.  10 a.m. - noon - 1:30 p.m.).</inlineHelpText>
    <label>Event End Time</label>
    <length>10</length>
    <type>Text</type>
</CustomField>