force-app/main/default/objects/Campaign/fields/Event_Location__c.field-meta.xml
<CustomField>
    <fullName>Event_Location__c</fullName>
    <description>Place where event is held. Ex: City, State, Country, Webinar, Online Event</description>
    <inlineHelpText>Ex: City, State, Country, Webinar, Online Event</inlineHelpText>
    <label>Event Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>