force-app/main/default/objects/Campaign/fields/Event_Mode__c.field-meta.xml
<CustomField>
    <fullName>Event_Mode__c</fullName>
    <businessOwnerGroup>Data_Owner_ESISD</businessOwnerGroup>
    <description>[Populated by Recruitment users who create campaigns]-Event Mode on Event Campaign Record Type</description>
    <inlineHelpText>For in person events, select either "On-campus" or "Off-campus".  Select "Sync" if the event has both virtual and in-person components happening simultaneously or "Virtual" if the event is 100% online.</inlineHelpText>
    <label>Event Mode</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Off-campus</fullName>
            </value>
            <value>
                <fullName>On-campus</fullName>
            </value>
            <value>
                <fullName>Sync</fullName>
            </value>
            <value>
                <fullName>Virtual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>