force-app/main/default/objects/Campaign/fields/Event_Special_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Event_Special_Instructions__c</fullName>
    <description>Special instructions for the event.</description>
    <label>Event Special Instructions</label>
    <type>TextArea</type>
</CustomField>