force-app/main/default/objects/Campaign/fields/Event_URL__c.field-meta.xml
<CustomField>
    <fullName>Event_URL__c</fullName>
    <description>This URL is the general URL for event, not a RSVP URL.</description>
    <inlineHelpText>This URL is the general URL for event, not a RSVP URL.</inlineHelpText>
    <label>Event URL</label>
    <type>Url</type>
</CustomField>