force-app/main/default/objects/Campaign/fields/Guests_Allowed__c.field-meta.xml
<CustomField>
    <fullName>Guests_Allowed__c</fullName>
    <description>The number of guests permitted per participant.</description>
    <inlineHelpText>The number of guests permitted per participant.</inlineHelpText>
    <label>Guests Allowed</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>