force-app/main/default/objects/Campaign/fields/HashCampaignId__c.field-meta.xml
<CustomField>
    <fullName>HashCampaignId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>HashCampaignId</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>