force-app/main/default/objects/Campaign/fields/IER_Privacy__c.field-meta.xml
<CustomField>
    <fullName>IER_Privacy__c</fullName>
    <inlineHelpText>Default - IER Privacy will match the more restrictive of the Business Unit or Subscription settings
Override as Public - IERs will be public
Override as Private to Subscription Queue - IERs will be private, visible to the Queue on the Subscription</inlineHelpText>
    <label>IER Privacy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Default</fullName>
                <default>true</default>
                <label>Default</label>
            </value>
            <value>
                <fullName>Override as Public</fullName>
            </value>
            <value>
                <fullName>Override as Private to Subscription Queue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>