force-app/main/default/objects/Campaign/fields/IER_Privacy_Changed__c.field-meta.xml
<CustomField>
    <fullName>IER_Privacy_Changed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the "IER Privacy" field was recently changed; used by a scheduled job to set IER records' visibility</description>
    <inlineHelpText>Indicates whether the "IER Privacy" field was recently changed; used by a scheduled job to set IER records' visibility</inlineHelpText>
    <label>IER Privacy Changed</label>
    <type>Checkbox</type>
</CustomField>