force-app/main/default/objects/Campaign/fields/Interest_Degree_Search_Bucket__c.field-meta.xml
<CustomField>
    <fullName>Interest_Degree_Search_Bucket__c</fullName>
    <label>Interest Degree Search Bucket</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>architecture and construction</fullName>
            </value>
            <value>
                <fullName>arts</fullName>
            </value>
            <value>
                <fullName>ASU's degree search</fullName>
            </value>
            <value>
                <fullName>business</fullName>
            </value>
            <value>
                <fullName>College of Health Solutions</fullName>
            </value>
            <value>
                <fullName>College of Liberal Arts &amp; Sciences</fullName>
            </value>
            <value>
                <fullName>College of Nursing &amp; Health Innovation</fullName>
            </value>
            <value>
                <fullName>College of Public Programs</fullName>
            </value>
            <value>
                <fullName>College of Technology &amp; Innovation</fullName>
            </value>
            <value>
                <fullName>communication and media</fullName>
            </value>
            <value>
                <fullName>computing and mathematics</fullName>
            </value>
            <value>
                <fullName>education and teaching</fullName>
            </value>
            <value>
                <fullName>engineering and technology</fullName>
            </value>
            <value>
                <fullName>exploratory</fullName>
            </value>
            <value>
                <fullName>health and wellness</fullName>
            </value>
            <value>
                <fullName>Herberger Institute for Design and the Arts</fullName>
            </value>
            <value>
                <fullName>humanities</fullName>
            </value>
            <value>
                <fullName>interdisciplinary studies</fullName>
            </value>
            <value>
                <fullName>Ira A. Fulton Schools of Engineering</fullName>
            </value>
            <value>
                <fullName>law and justice</fullName>
            </value>
            <value>
                <fullName>Mary Lou Fulton Teachers College</fullName>
            </value>
            <value>
                <fullName>New College of Interdisciplinary Arts and Sciences</fullName>
            </value>
            <value>
                <fullName>psychology</fullName>
            </value>
            <value>
                <fullName>School of Letters &amp; Sciences</fullName>
            </value>
            <value>
                <fullName>School of Sustainability</fullName>
            </value>
            <value>
                <fullName>science</fullName>
            </value>
            <value>
                <fullName>social and behavioral sciences</fullName>
            </value>
            <value>
                <fullName>STEM</fullName>
            </value>
            <value>
                <fullName>sustainability</fullName>
            </value>
            <value>
                <fullName>W.P. Carey School of Business</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>