force-app/main/default/objects/Campaign/fields/Interest_Degree_Search_Bucket_URL_1__c.field-meta.xml
<CustomField>
    <fullName>Interest_Degree_Search_Bucket_URL_1__c</fullName>
    <label>Interest Degree Search Bucket URL 1</label>
    <type>Url</type>
</CustomField>