force-app/main/default/objects/Campaign/fields/Interest_PeopleSoft_Major__c.field-meta.xml
<CustomField>
    <fullName>Interest_PeopleSoft_Major__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Interest PeopleSoft Major</label>
    <referenceTo>Plan__c</referenceTo>
    <relationshipLabel>Campaigns</relationshipLabel>
    <relationshipName>Campaigns</relationshipName>
    <type>Lookup</type>
</CustomField>