force-app/main/default/objects/Campaign/fields/Interest_URL__c.field-meta.xml
<CustomField>
    <fullName>Interest_URL__c</fullName>
    <label>Interest URL</label>
    <type>Url</type>
</CustomField>