force-app/main/default/objects/Campaign/fields/Is_Recurrence__c.field-meta.xml
<CustomField>
    <fullName>Is_Recurrence__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Denotes reoccurring event</description>
    <inlineHelpText>Check if event is reoccurring</inlineHelpText>
    <label>Is Recurrence</label>
    <type>Checkbox</type>
</CustomField>