force-app/main/default/objects/Campaign/fields/Map_URL__c.field-meta.xml
<CustomField>
    <fullName>Map_URL__c</fullName>
    <description>URL to the map of the event.</description>
    <label>Map URL</label>
    <type>Url</type>
</CustomField>