force-app/main/default/objects/Campaign/fields/Marketing_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links marketing campaign to a group of events. The group of events will appear on the marketing campaign.</description>
    <inlineHelpText>Use this field to tie this event to outbound marketing campaigns.</inlineHelpText>
    <label>Marketing Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Event Campaigns</relationshipLabel>
    <relationshipName>EventCampaigns</relationshipName>
    <type>Lookup</type>
</CustomField>