force-app/main/default/objects/Campaign/fields/Marketing_Campaign_ID__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Campaign_ID__c</fullName>
    <formula>Marketing_Campaign__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The Salesforce ID of the Marketing Campaign. Used for reporting. (e.g. show me Contacts that do not have a Campaign Member with this ID).</inlineHelpText>
    <label>Marketing Campaign ID</label>
    <type>Text</type>
</CustomField>