force-app/main/default/objects/Campaign/fields/Marketing_Cloud_Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Cloud_Business_Unit__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Used for Subscription Center Campaign record types - Indicates which MC Business Unit this campaign is associated with. When this field is set it also drives campaign security and sharing rules.</description>
    <inlineHelpText>Used for Subscription Center Campaign record types - Indicates which MC Business Unit this campaign is associated with. When this field is set it also drives campaign security and sharing rules.</inlineHelpText>
    <label>Marketing Cloud Business Unit</label>
    <referenceTo>Marketing_Cloud_Business_Unit__c</referenceTo>
    <relationshipLabel>Campaigns</relationshipLabel>
    <relationshipName>Campaigns</relationshipName>
    <type>Lookup</type>
</CustomField>