force-app/main/default/objects/Campaign/fields/Marketing_Cloud_Classification_Type__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Cloud_Classification_Type__c</fullName>
    <description>Used on Subscription Center campaign record type to indicate the type of send classification used when sending to these campaigns.</description>
    <inlineHelpText>Used on Subscription Center campaign record type to indicate the type of send classification used when sending to these campaigns.</inlineHelpText>
    <label>MC Classification Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Commerical</fullName>
            </value>
            <value>
                <fullName>Transactional</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>