force-app/main/default/objects/Campaign/fields/Marketing_Cloud_Private_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Cloud_Private_Campaign__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used for Subscription Center record types - If checked/true the campaign will only be visible to the MC Business Unit the campaign is associated with.</description>
    <inlineHelpText>Used for Subscription Center record types - If checked/true the campaign will only be visible to the MC Business Unit the campaign is associated with.</inlineHelpText>
    <label>MC Private Campaign</label>
    <type>Checkbox</type>
</CustomField>