force-app/main/default/objects/Campaign/fields/MC_CampaignShareId__c.field-meta.xml
<CustomField>
    <fullName>MC_CampaignShareId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Used for Subscription Center record types - The Id of the CampaignShare record that was created by process builder and a flow.</description>
    <inlineHelpText>Used for Subscription Center record types - The Id of the CampaignShare record that was created by process builder and a flow.</inlineHelpText>
    <label>MC CampaignShareId</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>