force-app/main/default/objects/Campaign/fields/MC_Venue_Information_1__c.field-meta.xml
<CustomField>
    <fullName>MC_Venue_Information_1__c</fullName>
    <label>MC Venue Information 1</label>
    <type>TextArea</type>
</CustomField>