force-app/main/default/objects/Campaign/fields/MC_Venue_Information_2__c.field-meta.xml
<CustomField>
    <fullName>MC_Venue_Information_2__c</fullName>
    <label>MC Venue Information 2</label>
    <type>TextArea</type>
</CustomField>