force-app/main/default/objects/Campaign/fields/MC_Venue_Information_3__c.field-meta.xml
<CustomField>
    <fullName>MC_Venue_Information_3__c</fullName>
    <label>MC Venue Information 3</label>
    <type>TextArea</type>
</CustomField>