force-app/main/default/objects/Campaign/fields/Normalized_Event_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Normalized_Event_Start_Time__c</fullName>
    <businessOwnerGroup>Data_Owner_Admission_Services</businessOwnerGroup>
    <description>Time the event will start. This must be set to a 5 minute increment. Whenever this field changes, it automatically sets Event_Start_Time__c according to ASU Communication Guidelines.</description>
    <inlineHelpText>Time the event will start. This must be set to a 5 minute increment. Whenever this field changes, it automatically sets Event_Start_Time__c according to ASU Communication Guidelines.</inlineHelpText>
    <label>Event Start Time</label>
    <type>Time</type>
</CustomField>