force-app/main/default/objects/Campaign/fields/Normalized_Registration_Time__c.field-meta.xml
<CustomField>
    <fullName>Normalized_Registration_Time__c</fullName>
    <businessOwnerGroup>Data_Owner_Admission_Services</businessOwnerGroup>
    <description>Time the participant should check-in.</description>
    <inlineHelpText>Time the participant should check-in.</inlineHelpText>
    <label>Registration Time</label>
    <type>Time</type>
</CustomField>