force-app/main/default/objects/Campaign/fields/Number_Available__c.field-meta.xml
<CustomField>
    <fullName>Number_Available__c</fullName>
    <description>The number of registrations available according to Capacity less Number Registered/Attended Attendees.</description>
    <formula>Capacity__c -  Number_Registered_Attended_Attendees__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The number of registrations available according to Capacity less Number Registered/Attended Attendees.</inlineHelpText>
    <label>Number Available</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>