force-app/main/default/objects/Campaign/fields/Number_Registered_Attended_Attendees__c.field-meta.xml
<CustomField>
    <fullName>Number_Registered_Attended_Attendees__c</fullName>
    <formula>Number_Registered_Attended_Guests__c + Number_Registered_Attended_Participants__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The Number Registered/Attended Participants + Number Registered/Attended Guests</inlineHelpText>
    <label>Number Registered/Attended Attendees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>